Source/WebCore/Modules/mediastream/MediaDevices.h
@@ -125,7 +125,7 @@ private:
     bool m_canAccessMicrophone { false };
 
     OptionSet<GestureAllowedRequest> m_requestTypesForCurrentGesture;
-    UserGestureToken* m_currentGestureToken { nullptr };
+    WeakPtr<UserGestureToken> m_currentGestureToken;
 };
 
 } // namespace WebCore
